# dependabot-reviewer

./: .gitignore  Cargo.toml  flake.nix  justfile
.github/workflows/: ci.yml  codecov.yml
scripts/: loop.sh  mass_rebase_dependabot.sh
src/: cli.rs  error.rs  main.rs
src/app/: fetch.rs  interactive.rs  mod.rs  process.rs  state.rs
src/github/: ci_status.rs  mod.rs  pr.rs
