[package]
name = "dependabot-reviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
octocrab = "0.38"
tokio = { version = "1", features = ["full"] }
url = "2.5"
error-stack = "0.5"
