[package]
name = "dependabot-reviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
derive_more = { version = "2", features = ["display"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
dirs = "6"
error-stack = "0.6"
futures-buffered = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
impl-more = "0.3"
octocrab = "0.49"
semver = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "1"
